namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default

---
apiVersion: v1
kind: Namespace
metadata:
  name: prd-eks-useast1
