nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "core-deployment"
  namespace: "prd-eks-useast1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: "core"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "core"
    spec:
      containers:
      - image: nginx
        resources:
          requests:
            memory: "2Gi"
            cpu: "1024m"
          limits:
            memory: "2Gi"
            cpu: "1024m"
        imagePullPolicy: Always
        name: "core"
        ports:
        - containerPort: 80
